testsuite/tests/rename/should_fail/RnStaticPointersFail02.hs
{-# LANGUAGE StaticPointers #-}

module RnStaticPointersFail02 where

f = static T

data T = TDataCons
